--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://xu-gillian.github.io/Order-Food-App",
+  "homepage": "http://xu-gillian.github.io/YuMyUm",
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
